--- a/2_login/index.html
+++ b/2_login/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <main>
-        <h2>Login</h2>
+        <h2>Login Form</h2>
         <form action="#">
             <div class="login">
                 <label for="login">Login</label>
