--- a/2_login/index.html
+++ b/2_login/index.html
@@ -25,8 +25,9 @@
                 <input type="password" name="password" id="password" placeholder="password" minlength="3"
                     maxlength="20">
             </div>
-            <div class="submit">
-                <button>Submit</button>
+            <div class="submitGroup">
+                <button class="btnSubmit">Submit</button>
+                <button class="btnReset">Reset</button>
             </div>
 
         </form>
