add transform translate

--- a/3_position/index.html
+++ b/3_position/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <nav>My nav</nav>
+
+    <div class="card">
+        <div class="text">The center text</div>
+    </div>
+
+
     <div id="box1"  class="box1">1
         <div class="box2">2</div>
     </div>
