--- a/4_flexbox/index.html
+++ b/4_flexbox/index.html
@@ -19,5 +19,11 @@
             </div>
         </nav>
     </header>
+
+    <div class="container">
+        <div class="b1">Box1</div>
+        <div class="b2">Box2</div>
+        <div class="b3">Box3</div>
+    </div>
 </body>
 </html>
