--- a/6_responsive/index.html
+++ b/6_responsive/index.html
@@ -47,6 +47,18 @@
                 alt="cat" >
                 <div>Lorem ipsum dolor sit amet.</div>
             </div>
+            <div class="card">
+                <h1>Cat Memory</h1>
+                <img src="https://images.unsplash.com/photo-1593483316242-efb5420596ca?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
+                alt="cat" >
+                <div>Lorem ipsum dolor sit amet.</div>
+            </div>
+            <div class="card">
+                <h1>Cat Memory</h1>
+                <img src="https://images.unsplash.com/photo-1593483316242-efb5420596ca?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
+                alt="cat" >
+                <div>Lorem ipsum dolor sit amet.</div>
+            </div>
         </div>
     </main>
 </body>
