--- a/6_responsive/index.html
+++ b/6_responsive/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+
+    <div class="box"></div>
+
     <nav>
         <img class="logo" src="https://cdn-icons-png.flaticon.com/128/3276/3276136.png" width="70" alt="cat logo">
             
@@ -61,6 +64,9 @@
             </div>
         </div>
     </main>
+    <footer>
+        Copyright Reserved 2026
+    </footer>
 </body>
 
 </html>
