add media query and hamburger

--- a/6_responsive/index.html
+++ b/6_responsive/index.html
@@ -9,57 +9,62 @@
 </head>
 
 <body>
-
-    <div class="box"></div>
-
     <nav>
         <img class="logo" src="https://cdn-icons-png.flaticon.com/128/3276/3276136.png" width="70" alt="cat logo">
-            
+
         </img>
         <div class="right">
             <span>Home</span>
             <span>Service</span>
             <span>Contact</span>
         </div>
+
+        <div class="hamburger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
     </nav>
 
     <main>
         <section>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit mollitia, impedit dicta molestiae atque neque aliquid hic? Aspernatur sequi quisquam, vero expedita itaque illum aliquid.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit mollitia, impedit dicta molestiae atque
+            neque aliquid hic? Aspernatur sequi quisquam, vero expedita itaque illum aliquid.
         </section>
         <section>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit mollitia, impedit dicta molestiae atque neque aliquid hic? Aspernatur sequi quisquam, vero expedita itaque illum aliquid.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit mollitia, impedit dicta molestiae atque
+            neque aliquid hic? Aspernatur sequi quisquam, vero expedita itaque illum aliquid.
         </section>
 
         <div class="container">
             <div class="card">
                 <h1>Cat Memory</h1>
-                <img src="https://images.unsplash.com/photo-1593483316242-efb5420596ca?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
-                alt="cat" >
+                <img src="https://images.unsplash.com/photo-1593483316242-efb5420596ca?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="cat">
                 <div>Lorem ipsum dolor sit amet.</div>
             </div>
             <div class="card">
                 <h1>Cat Memory</h1>
-                <img src="https://images.unsplash.com/photo-1593483316242-efb5420596ca?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
-                alt="cat" >
+                <img src="https://images.unsplash.com/photo-1593483316242-efb5420596ca?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="cat">
                 <div>Lorem ipsum dolor sit amet.</div>
             </div>
             <div class="card">
                 <h1>Cat Memory</h1>
-                <img src="https://images.unsplash.com/photo-1593483316242-efb5420596ca?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
-                alt="cat" >
+                <img src="https://images.unsplash.com/photo-1593483316242-efb5420596ca?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="cat">
                 <div>Lorem ipsum dolor sit amet.</div>
             </div>
             <div class="card">
                 <h1>Cat Memory</h1>
-                <img src="https://images.unsplash.com/photo-1593483316242-efb5420596ca?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
-                alt="cat" >
+                <img src="https://images.unsplash.com/photo-1593483316242-efb5420596ca?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="cat">
                 <div>Lorem ipsum dolor sit amet.</div>
             </div>
             <div class="card">
                 <h1>Cat Memory</h1>
-                <img src="https://images.unsplash.com/photo-1593483316242-efb5420596ca?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
-                alt="cat" >
+                <img src="https://images.unsplash.com/photo-1593483316242-efb5420596ca?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="cat">
                 <div>Lorem ipsum dolor sit amet.</div>
             </div>
         </div>
