--- a/6_responsive/index.html
+++ b/6_responsive/index.html
@@ -19,7 +19,9 @@
             <span>Contact</span>
         </div>
 
-        <div class="hamburger">
+        <div class="hamburger"
+            onclick="toggleMenu()"
+            >
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
